Refactor: Improve task input and filtering
- Set EditText imeOptions to "actionDone" for better UX.
- Remove "Todo" RadioButton and associated logic.
- Implement editor action listener on EditText to add tasks on "Done" or "Next" key press.
- Update TareasAdapter to reflect changes in task filtering and editing.
- Add methods to save and retrieve task list in SharedPreferences.
- Use @SuppressLint for "SetTextI18n" and "NotifyDataSetChanged" where appropriate.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
         android:layout_gravity="center"
         android:layout_margin="12dp"
         android:gravity="center"
-        android:hint="Ingrese una tarea" />
+        android:hint="Ingrese una tarea"
+        android:imeOptions="actionDone" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -36,29 +37,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <RadioButton
-                android:id="@+id/checkbox_tarea_todo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Todo"/>
+
             <RadioButton
                 android:id="@+id/checkbox_tarea_pendiente"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pendientes"/>
+                android:text="Pendientes" />
 
             <RadioButton
                 android:id="@+id/checkbox_tarea_completada"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Completada"/>
+                android:text="Completada" />
         </RadioGroup>
 
 
     </LinearLayout>
-
-
-
 
 
     <Button
@@ -68,7 +62,7 @@
         android:layout_gravity="center"
         android:layout_margin="4dp"
         android:text="Agregar tarea"
-        android:visibility="visible"/>
+        android:visibility="visible" />
 
     <!--Texto de tareas pendientes y cantidad de tarea-->
     <TextView
