--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,32 @@
         android:text="Agregar tarea"
         android:visibility="visible" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/btnFiltroPendientes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="4dp"
+            android:text="Pendientes"
+            android:visibility="visible" />
+        <Button
+            android:id="@+id/btnFiltroCompletadas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="4dp"
+            android:text="Completadas"
+            android:visibility="visible" />
+
+    </LinearLayout>
+
     <!--Texto de tareas pendientes y cantidad de tarea-->
     <TextView
         android:id="@+id/txtTareasPendientes"
