Refactor: Update activity_main.xml layout
- Remove unused `xmlns:app` namespace.
- Reorder attributes for the `LinearLayout` containing filter buttons for consistency.
- Add comments to clarify the purpose of the filter buttons.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -28,7 +27,6 @@
         android:imeOptions="actionDone" />
 
 
-
     <Button
         android:id="@+id/btnAgregarTarea"
         android:layout_width="wrap_content"
@@ -38,12 +36,13 @@
         android:text="Agregar tarea"
         android:visibility="visible" />
 
+    <!--Botones filtros-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_gravity="center"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btnFiltroPendientes"
@@ -53,6 +52,7 @@
             android:layout_margin="4dp"
             android:text="Pendientes"
             android:visibility="visible" />
+
         <Button
             android:id="@+id/btnFiltroCompletadas"
             android:layout_width="wrap_content"
